<resources>
    <string name="app_name">Sismic</string>
    <string name="action_home">Home</string>
    <string name="action_graph_history">Storico</string>
    <string name="action_profile">Profilo</string>
    <string name="new_report_btn_str">Nuova verifica</string>
    <string name="view_history_btn_str">Storico</string>
    <string name="et_name_hint">Nome</string>
    <string name="et_surname_hint">Cognome</string>
    <string name="et_email_hint">Email</string>
    <string name="et_phone_hint">Telefono</string>
    <string name="et_qualification_hint">Qualificazione</string>
    <string name="et_register_hint">Riferimento Albo</string>
    <string name="et_address_hint">Indirizzo</string>
    <string name="i_reorder_history">Riordina</string>
    <string name="action_reorder_history_az">a-z</string>
    <string name="action_reorder_history_za">z-a</string>
    <string name="action_reorder_history_date_asc">data ascendente</string>
    <string name="action_reorder_history_date_desc">data discendente</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_report">Verifica</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Crea un account</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Indirizzo email invalido</string>
    <string name="error_invalid_password">Password troppo corta</string>
    <string name="login_error">Nome utente o password sbagliati, riprovare (CodErr: %d)</string>
    <string name="error_field_required">Campo obbligatorio</string>
    <string name="permission_rationale">"Permesso di accedere ai contatti per autocompletamento indirizzi email."</string>
    <string name="remember_me">Resta connesso</string>
    <string name="def_title">NonSupportato</string>
    <string name="info_loc_report_title">Ubicazione</string>
    <string name="catasto_report_title">Dati catastali</string>
    <string name="dati_sismogenetici_report_title">Dati sismogenetici</string>
    <string name="confir_reg_btn">Conferma</string>
    <string name="title_activity_register">Registrazione</string>
    <string name="parametri_sismici_report_title">Parametri Sismici</string>
    <string name="spettri_progetto_report_title">Spettri di progetto</string>
    <string name="error_unsupported">Non supportato</string>
    <string name="dati_generali_report_title">Dati generali</string>
    <string name="dati_strutturali_report_title">Dati strutturali</string>
    <string name="pilastri_report_title">Pilastri</string>
    <string name="riepilogo_report_title">Riepilogo</string>
    <string name="risultati_report_title">Risultati</string>
    <string name="report_first">INVISIBILE</string>
    <string name="report_next">PROSSIMO</string>
    <string name="report_back">PRECEDENTE</string>
    <string name="report_complete">SALVA</string>
    <string name="welcome">Primo accesso? Registrati qui</string>
    <string name="report_info_section_title">INFORMAZIONI SCHEDA</string>
    <string name="report_localization_section_title">LOCALIZZAZIONE EDIFICIO</string>
    <string name="not_defined">Not Defined</string>
    <string name="report_latitute_parameter">Latitudine</string>
    <string name="report_longitude_parameter">Longitudine</string>
    <string name="report_latitute_parameter_hint">Inserire longitudine</string>
    <string name="report_longitude_parameter_hint">Inserire longitudine</string>
    <string name="action_reverseGeolocalization">Geolocalizzazione inversa</string>
    <string name="action_geolocalization">Geolocalizzazione</string>
    <string name="action_fromMap">Scegli su mappa</string>
    <string name="report_info_number_label">ID Verifica:</string>
    <string name="report_info_name_label">Nome: </string>
    <string name="report_info_data_label">Data e ora: </string>
    <string name="report_state_parameter">Stato</string>
    <string name="report_state_parameter_hint">Inserisci stato</string>
    <string name="report_region_parameter">Regione</string>
    <string name="report_region_parameter_hint">Inserisci regione</string>
    <string name="report_province_parameter">Provincia</string>
    <string name="report_province_parameter_hint">Inserisci provincia</string>
    <string name="report_comune_parameter">Comune</string>
    <string name="report_comune_parameter_hint">Inserisci comune</string>
    <string name="report_address_parameter">Indirizzo</string>
    <string name="report_address_parameter_hint">Inserisci indirizzo, numero civico</string>
    <string name="report_cap_parameter">CAP</string>
    <string name="report_cap_parameter_hint">Inserisci codice avviamento postale</string>
    <string name="report_sismic_parameter">Zona sismica</string>
    <string name="report_sismic_parameter_hint">Zona sismica calcolata</string>
    <string name="report_istat_parameter">Codice Istat</string>
    <string name="report_istat_parameter_hint">Codice Istat relativo</string>
    <string name="report_sheet_parameter">Foglio</string>
    <string name="report_sheet_parameter_hint">Riferimento foglio catastale</string>
    <string name="report_mappale_parameter">Mappale</string>
    <string name="report_mappale_parameter_hint">Mappale di riferimento al catasto</string>
    <string name="report_particella_parameter">Particella</string>
    <string name="report_particella_parameter_hint">Particella di riferimento al catasto</string>
    <string name="report_catasto_section_title">RIFERIMENTI CATASTALI</string>
    <string name="report_cartography_section_title">CARTOGRAFIA DI RILEVAZIONE</string>
    <string name="report_foglio_cart_parameter">Foglio</string>
    <string name="report_edificio_parameter">Edificio</string>
    <string name="report_foglio_cart_parameter_hint">Foglio di riferimento cartografico</string>
    <string name="report_edificio_parameter_hint">Edificio</string>
    <string name="report_aggr_str_parameter">Aggregato strutturale</string>
    <string name="report_aggr_str_parameter_hint">Inserire aggregato strutturale</string>
    <string name="report_urbanistic_section_title">URBANISTICA</string>
    <string name="report_zona_urb_parameter">Zona di piano</string>
    <string name="report_zona_urb_parameter_hint">Inserire zona di piano</string>
    <string name="report_piano_urb_parameter">Piano attuativo</string>
    <string name="report_piano_urb_parameter_hint">Inserire piano attuativo</string>
    <string name="report_vincoli_urb_parameter">Vincoli</string>
    <string name="report_vincoli_urb_parameter_hint">Inserire vincoli urbani</string>
    <string name="permission_denied">Permesso alla localizzazione negato</string>
    <string name="permission_video_denied">Permesso all\'acquisizione video negato</string>
    <string name="permission_audio_denied">Permesso all\'acquisizione audio negato</string>
    <string name="report_datisismogenetici_title">DATI SISMOGENETICI</string>
    <string name="report_datisimogenetici_coordinate_label">Coordinate</string>
    <string name="report_datisimogenetici_indirizzo_label">Indirizzo</string>
    <string name="report_datisimogenetici_zonasismica_label">Zona Sismica</string>
    <string name="report_nodivicini_title">NODI VICINI</string>
    <string name="nodi_request_button_text">Acquisci valori</string>
    <string name="report_spettrodirisposta_title">SPETTRO DI RISPOSTA</string>
    <string name="report_parametri_sismici_title">PARAMETRI SISMICI EDIFICIO</string>
    <string name="report_classe_parameter">Classe d\'uso</string>
    <string name="report_classe_parameter_hint">Classe d\'uso dell\'edificio</string>
    <string name="report_vita_parameter">Vita nominale (anni)</string>
    <string name="report_vita_parameter_hint">Vita nominale dell\'edificio</string>
    <string name="report_spettridiprogetto_title">SPETTRI DI PROGETTO</string>
    <string name="report_caratteristichesottosuolo_title">CARATTERISTICHE SOTTOSUOLO</string>
    <string name="report_fattoredistruttura_title">FATTORE DI STRUTTURA</string>
    <string name="categoria_suolo_parameter">Categoria suolo</string>
    <string name="catetoria_suolo_parameter_hint">Categoria suolo</string>
    <string name="categoria_topografica_parameter">Categoria topografica</string>
    <string name="categoria_classe_duttilita_parameter">Classe di duttilità</string>
    <string name="categoria_tipologia_parameter">Tipologia</string>
    <string name="update_graph_btn">Aggiorna</string>
    <string name="report_rilievo_esterno_title">RILIEVO ESTERNO FABBRICATO</string>
    <string name="report_rilievo_interno_title">RILIEVO PLANIMETRICO ESTERNO</string>
    <string name="piani_numero_parameter">Numero piani</string>
    <string name="altezza_piano_tr_parameter_hint">Inserisci l\'altezza del piano terra [m]</string>
    <string name="altezza_piano_tr_parameter">Altezza piano terra [m]</string>
    <string name="altezza_piani_sup_parameter_hint">Inserisci l\'altezza dei piani superiori [m]</string>
    <string name="altezza_piani_sup_parameter">Altezza piani superiori [m]</string>
    <string name="lunghezza_piano_parameter">Lunghezza [m]</string>
    <string name="lunghezza_piano_parameter_hint">L(x) [m]</string>
    <string name="larghezza_piano_parameter_hint">L(y) [m]</string>
    <string name="larghezza_piano_parameter">Larghezza [m]</string>
    <string name="report_regolare_altezza">Regolare in altezza</string>
    <string name="direzione_x">DIREZIONE X</string>
    <string name="direzione_y">DIREZIONE Y</string>
    <string name="num_x_title">Numero pilastri lungo x</string>
    <string name="num_x_title_hint">N# lungo x</string>
    <string name="dist_x">Distanza [m]</string>
    <string name="dist_x_hint">Distanza tra pilastri lungo y [m]</string>
    <string name="num_y_title">Numero pilastri lungo y</string>
    <string name="num_y_title_hint">N# lungo y</string>
    <string name="dist_y">Distanza [m]</string>
    <string name="dist_y_hint">Distanza tra pilastri lungo y [m]</string>
    <string name="fondazioni_title">FONDAZIONI</string>
    <string name="copertura_title">COPERTURA</string>
    <string name="solaio_title">SOLAIO</string>
    <string name="fondazioni_type">Tipologia</string>
    <string name="fondazioni_h">Altezza</string>
    <string name="fondazioni_h_hint">H[cm]</string>
    <string name="g1_default">G1: -</string>
    <string name="solaio_type_1">Tipo</string>
    <string name="solaio_type_1_hint">Inserire tipo</string>
    <string name="solaio_type_2">Tipo (2)</string>
    <string name="solaio_type_2_hint">Tipo 2 (Es.: 16 +4)</string>
    <string name="solaio_g2">G2:</string>
    <string name="solaio_g2_hint">[kN/mq]</string>
    <string name="solaio_qk">QK:</string>
    <string name="solaio_qk_hint">[kN/mq]</string>
    <string name="calcola_q">Calcola Q</string>
    <string name="copertura_type_1">Tipo</string>
    <string name="copertura_type_1_hint">Inserire tipo</string>
    <string name="copertura_type_2">Tipo (2)</string>
    <string name="copertura_type_2_hint">Tipo 2 (Es.: 16 +4)</string>
    <string name="copertura_g2">G2:</string>
    <string name="copertura_g2_hint">kN/mq</string>
    <string name="copertura_qk">QK:</string>
    <string name="copertura_qk_hint">[kN/mq]</string>
    <string name="categoria_classe_duttilita_parameter_cda">CDA</string>
    <string name="categoria_classe_duttilita_parameter_cdb">CDB</string>
    <string name="fondazioni_type_platea">Platea</string>
    <string name="fondazioni_type_trave">Travi</string>
    <string name="fondazioni_type_plinti">Plinti</string>
    <string name="categoria_moltiplicatore_parameter">αu/α1</string>
    <string name="report_periodi_ritorno_title">PERIODI DI RITORNO</string>
</resources>