<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/scrollableLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/sectionTitle"
        android:text="@string/report_rilievo_esterno_title"/>


    <LinearLayout
        style="@style/spinnerContainer">

        <TextView
            style="@style/sectionSpinnerTitle"
            android:text="@string/piani_numero_parameter" />

        <Spinner
            android:id="@+id/piani_numero_parameter"
            style="@style/spinnerStyle"
            android:entries="@array/piani_numero"/>
    </LinearLayout>

    <com.polito.sismic.Presenters.CustomLayout.ParameterReportLayout
        android:id="@+id/altezza_piano_tr_parameter"
        app:report_parameter_title="@string/altezza_piano_tr_parameter"
        app:report_parameter_hint="@string/altezza_piano_tr_parameter_hint"
        app:report_parameter_isNumber="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.polito.sismic.Presenters.CustomLayout.ParameterReportLayout
        android:id="@+id/altezza_piani_sup_parameter"
        app:report_parameter_title="@string/altezza_piani_sup_parameter"
        app:report_parameter_hint="@string/altezza_piani_sup_parameter_hint"
        app:report_parameter_isNumber="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- To visualize the result -->
    <TextView
        android:id="@+id/tot_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/sectionTitle"
        android:text="@string/report_rilievo_interno_title"/>

    <!-- TODO BETTER !-->
    <com.polito.sismic.Presenters.CustomLayout.ParameterReportLayout
        android:id="@+id/lunghezza_piano_parameter"
        app:report_parameter_title="@string/lunghezza_piano_parameter"
        app:report_parameter_hint="@string/lunghezza_piano_parameter_hint"
        app:report_parameter_isNumber="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.polito.sismic.Presenters.CustomLayout.ParameterReportLayout
        android:id="@+id/larghezza_piano_parameter"
        app:report_parameter_title="@string/larghezza_piano_parameter"
        app:report_parameter_hint="@string/larghezza_piano_parameter_hint"
        app:report_parameter_isNumber="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <CheckBox
        style="@style/checkBoxStyle"
        android:id="@+id/regolare_in_altezza"
        android:text="@string/report_regolare_altezza" />

    <TextView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>