<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/scrollableLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/sectionTitle"
        android:text="@string/report_caratteristichesottosuolo_title"/>


    <LinearLayout
        style="@style/spinnerContainer">

        <TextView
            style="@style/sectionSpinnerTitle"
            android:text="@string/categoria_suolo_parameter" />

        <Spinner
            android:id="@+id/categoria_suolo_parameter"
            style="@style/spinnerStyle"
            android:entries="@array/cat_suolo"/>
    </LinearLayout>

    <LinearLayout
        style="@style/spinnerContainer">

        <TextView
            style="@style/sectionSpinnerTitle"
            android:text="@string/categoria_topografica_parameter" />

        <Spinner
            android:id="@+id/categoria_topografica_parameter"
            style="@style/spinnerStyle"
            android:entries="@array/cat_topografica"/>
    </LinearLayout>

    <TextView
        style="@style/sectionTitle"
        android:text="@string/report_fattoredistruttura_title"/>

    <TextView
        android:text="@string/categoria_classe_duttilita_parameter"
        style="@style/sectionButtonTitle"/>

    <LinearLayout style="@style/toggleButtonsContainer">

        <ToggleButton
            android:id="@+id/categoria_classe_duttilita_parameter_cda"
            style="@style/CustomToggleButton"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="@dimen/place_autocomplete_button_padding"
            android:layout_marginRight="@dimen/place_autocomplete_button_padding"
            android:checked="true"
            android:textOff="@string/categoria_classe_duttilita_parameter_cda"
            android:textOn="@string/categoria_classe_duttilita_parameter_cda" />

        <ToggleButton
            android:id="@+id/categoria_classe_duttilita_parameter_cdb"
            style="@style/CustomToggleButton"
            android:checked="false"
            android:textOff="@string/categoria_classe_duttilita_parameter_cdb"
            android:textOn="@string/categoria_classe_duttilita_parameter_cdb"/>
    </LinearLayout>

    <CheckBox
        style="@style/checkBoxStyle"
        android:id="@+id/regolare_in_altezza"
        android:text="@string/report_regolare_altezza" />

    <LinearLayout
        style="@style/spinnerContainer">

        <TextView
            style="@style/sectionSpinnerTitle"
            android:text="@string/categoria_tipologia_parameter" />

        <Spinner
            android:id="@+id/categoria_tipologia_parameter"
            style="@style/spinnerStyle"
            android:entries="@array/cat_tipologia"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/categoria_moltiplicatore_parameter_container"
        style="@style/spinnerContainer">

        <TextView
            style="@style/sectionSpinnerTitle"
            android:text="@string/categoria_moltiplicatore_parameter" />

        <Spinner
            android:id="@+id/categoria_moltiplicatore_parameter"
            style="@style/spinnerStyle"
            android:entries="@array/cat_moltiplicatore_1"/>
    </LinearLayout>

    <TextView
        style="@style/sectionTitle"
        android:text="@string/report_spettrodirisposta_title"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/report_spettrodirisposta_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/update_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/update_graph_btn"/>

</LinearLayout>